--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "url": "https://github.com/angular/universal-starter.git"
   },
   "scripts": {
-    "postinstall": "typings install",
     "watch": "webpack --watch",
     "prebuild": "rimraf ng2-target",
     "build": "webpack",
@@ -24,25 +23,26 @@
     "Jeff Cross <crossj@google.com>"
   ],
   "dependencies": {
-    "@angular/common": "2.0.0-rc.1",
-    "@angular/compiler": "2.0.0-rc.1",
-    "@angular/core": "2.0.0-rc.1",
-    "@angular/http": "2.0.0-rc.1",
-    "@angular/platform-browser": "2.0.0-rc.1",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.1",
-    "@angular/platform-server": "2.0.0-rc.1",
-    "@angular/router-deprecated": "2.0.0-rc.1",
-    "angular2-universal": "~0.100.2",
-    "preboot": "~2.0.10",
-    "rxjs": "5.0.0-beta.6"
+    "@angular/common": "~2.0",
+    "@angular/compiler": "~2.0",
+    "@angular/core": "~2.0",
+    "@angular/http": "~2.0",
+    "@angular/platform-browser": "~2.0",
+    "@angular/platform-browser-dynamic": "~2.0",
+    "@angular/platform-server": "~2.0",
+    "@angular/router": "~3.0",
+    "angular2-universal": "~2.0",
+    "preboot": "~4.5",
+    "rxjs": "5.0.0-beta.12"
   },
   "devDependencies": {
+    "@types/mime": "0.0.29",
+    "@types/node": "^6.0.41",
     "copy-webpack-plugin": "^1.1.1",
     "nodemon": "^1.8.1",
     "rimraf": "^2.5.2",
     "ts-loader": "^0.8.1",
-    "typescript": "^1.8.7",
-    "typings": "~0.8.1",
+    "typescript": "^2.0",
     "webpack": "^1.12.10",
     "webpack-dev-server": "^1.14.0",
     "webpack-merge": "^0.8.4"
