--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
-    
+
     <build>
         <plugins>
             <plugin>
@@ -38,27 +38,27 @@
             </plugin>
         </plugins>
     </build>
-    
+
     <dependencies>
         <dependency>
-            <groupId>j2v8</groupId>
-            <artifactId>j2v8</artifactId>
-            <version>4.1.1-SNAPSHOT-LOCAL</version>
+            <groupId>com.eclipsesource.j2v8</groupId>
+            <!-- fixme: choose based on host platform -->
+            <artifactId>j2v8_linux_x86_64</artifactId>
+            <version>4.6.0</version>
         </dependency>
 
-        
         <dependency>
             <groupId>com.sparkjava</groupId>
             <artifactId>spark-core</artifactId>
             <version>2.5</version>
         </dependency>
-        
+
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>2.6.2</version>
         </dependency>
-        
+
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
