--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,11 +5,11 @@
     "target": "es5",
     "module": "commonjs",
     "removeComments": true,
-    "sourceMap": true
+    "sourceMap": true,
+    "noEmit": true,
+    "lib": ["es5", "es2015.promise", "es2015.collection", "dom"]
   },
   "exclude": [
-    "typings/main.d.ts",
-    "typings/main",
     "node_modules"
   ],
   "compileOnSave": false,
